[metadata]
name = django-reactor
version = 5.2.0b0
description = Brings LiveView from Phoenix framework into Django
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
   Development Status :: 4 - Beta
   Environment :: Web Environment
   Framework :: Django
   Framework :: Django
   Intended Audience :: Developers
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Topic :: Internet :: WWW/HTTP

author = Eddy Ernesto del Valle Pino
author_email = eddy@edelvalle.me
license = MIT
url = https://github.com/edelvalle/reactor

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
   channels>=4,<5
	pydantic>=1.8,<2
   lru-dict>=1.2.0,<2

[options.extras_require]
dev =
   black
   djlint
   flake8
   ipython
   whitenoise
   channels-redis
   django-hmin
   django-stubs
   django-stubs-ext
   pyright
   ruff
   twine
   daphne

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 80
show-soure = true
ignore =
   B011  # 'assert False' is fine.
   E203  # black puts spaces before ':'
   W503  # line break before binary (and/or) operator
